--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,16 @@
-<bae-header class="fixed w-full z-50 top-0 start-0"></bae-header>
-<main class="bg-no-repeat bg-right pb-[60px] pt-[75px]">
-    <router-outlet></router-outlet>
+  <bae-header class="fixed w-full z-50 top-0 start-0"></bae-header>
+
+<main
+  class="bg-no-repeat bg-right pb-[60px] pt-[75px]"
+   
+>
+  <router-outlet></router-outlet>
 </main>
-@if(providerThemeName=='DOME') {
-    <app-chatbot-widget class="relative z-50"></app-chatbot-widget>
+@if (providerThemeName == "DOME") {
+  <app-chatbot-widget class="relative z-50"></app-chatbot-widget>
 }
 
-<bae-footer  class="fixed w-full z-30 bottom-0 start-0"></bae-footer>
+  <bae-footer class="fixed w-full z-30 bottom-0 start-0"></bae-footer>
 
 @if(isProduction){
     <script type="text/javascript"> _linkedin_partner_id = "8700705"; window._linkedin_data_partner_ids = window._linkedin_data_partner_ids || []; window._linkedin_data_partner_ids.push(_linkedin_partner_id); </script><script type="text/javascript"> (function(l) { if (!l){window.lintrk = function(a,b){window.lintrk.q.push([a,b])}; window.lintrk.q=[]} var s = document.getElementsByTagName("script")[0]; var b = document.createElement("script"); b.type = "text/javascript";b.async = true; b.src = "https://snap.licdn.com/li.lms-analytics/insight.min.js"; s.parentNode.insertBefore(b, s);})(window.lintrk); </script> <noscript> <img height="1" width="1" style="display:none;" alt="" src="https://px.ads.linkedin.com/collect/?pid=8700705&fmt=gif" /> </noscript>
